fixed z-index

--- a/login/main-style.css
+++ b/login/main-style.css
@@ -253,7 +253,7 @@ input[type="password"] {
     border-radius: 1em;
     box-shadow: 0 0.4em 0.8em rgba(0, 0, 0, 0.2);
     transition: all 0.5s ease;
-    z-index: 3;
+    z-index: 123789140;
 }
 
 .modal-content {
@@ -410,7 +410,7 @@ input[type="password"] {
     transform: translate(-50%, -50%);
     background: rgb(51, 50, 50);
     padding: 30px;
-    z-index: 1000;
+    z-index: 123789130;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
     max-width: 400px;
